JT-6732 Fix misaligned map column

--- a/app/assets/stylesheets/pages/search/_list-and-map.scss
+++ b/app/assets/stylesheets/pages/search/_list-and-map.scss
@@ -59,7 +59,6 @@
       @include media-breakpoint-down(sm) {
         width: 100%;
       }
-      top: 237px;
       @include media-breakpoint-down(sm) {
         position: initial;
       }
